--- a/styles/components/SpecialDish.module.scss
+++ b/styles/components/SpecialDish.module.scss
@@ -4,9 +4,13 @@
   flex-wrap: wrap;
   gap: 2rem;
   padding-top: 8rem;
+  height: 100% !important;
+  max-height: 90vh !important;
+  width: 100%;
 
   &__content {
     flex: 1 1 45rem;
+    max-width: 100%;
 
     .button {
       margin-left: 2rem;
@@ -73,16 +77,19 @@
   &__image {
     flex: 1 1 45rem;
     max-width: 50rem;
+    height: auto;
 
     img {
       width: 100%;
       height: auto;
       object-fit: contain;
+      max-height: 70vh;
     }
   }
 
   @media screen and (max-width: 768px) {
     padding-top: 7rem;
+    max-height: 85vh !important;
 
     &__content {
       flex: 1 1 40rem;
@@ -118,6 +125,10 @@
     &__image {
       flex: 1 1 40rem;
       max-width: 45rem;
+
+      img {
+        max-height: 60vh;
+      }
     }
   }
 }
