--- a/styles/components/SpecialDishes.module.scss
+++ b/styles/components/SpecialDishes.module.scss
@@ -1,13 +1,31 @@
 .home {
-  width: 100vw;
+  width: 100%;
   position: relative;
   background-image: linear-gradient(to bottom, #1D2B1B, #4C6F2A); /* Even darker leafy green to yellowish gradient */
-  margin-left: calc(-50vw + 50%);
-  margin-right: calc(-50vw + 50%);
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  height: 90vh !important;
+  max-height: 90vh !important;
+  display: flex;
+  align-items: center;
 }
 
 .swiper {
   width: 100%;
   max-width: 1200px;
   position: relative;
+  margin: 0 auto;
+  padding: 0 1rem;
+  height: 100%;
+}
+
+.swiper-wrapper {
+  height: 100%;
+}
+
+.swiper-slide {
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
