--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,6 +29,8 @@ html {
   scroll-padding-top: 5.5rem;
   scroll-behavior: smooth;
   font-family: 'Nunito', sans-serif;
+  width: 100%;
+  max-width: 100vw;
 
   @media screen and (max-width: 991px) {
     font-size: 55%;
@@ -37,6 +39,13 @@ html {
   @media screen and (max-width: 450px) {
     font-size: 50%;
   }
+}
+
+body {
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
+  position: relative;
 }
 
 section {
